--- a/style.css
+++ b/style.css
@@ -1,43 +1,46 @@
-body{
-font family-family: monospace;
-{
-  <style>
-            .declaration { 
-                font-weight: bold;
-            }
-            
-            .quote {
-                font-style:italic;
-            }
-        </style>
-  <style>
-            .big {
-                font-size:500px:;
-            }
-            
-            .bigger { 
-                font-size: 1000;
-            }
-        </style>
-  <style>
-        
-        body
-        {
-            font-family: Monospace;
+ <style>
+         .example {
+             
+       background-color:rgb(90, 180, 245);
+   }
+   h1, h2, p{
+   		text-align:center;
+   }
+   h1{
+   		font-size: 50px;
+   }
+   h2{
+   		font-size: 35px; 
+   }
+   
+   p{
+       color:rgb(225, 255, 0);
+   }
+   
+   h1{
+       color:rgb(225, 255, 0);
+   }
+   
+   h2{
+       color:rgb(225,255,0);
+   }
+   
+   ul{
+       color:rgb(225,255,0);
+   }
+   
+   .center {
+       display: block;
+       margin-left: auto;
+       margin-right: auto;
+       width: 50%;
+   }
+   
+   section {
+            padding: 20px;
+            margin: 20px;
+            background-color: rgb(173,216,230);
+            border-radius: 8px;
         }
-        
-        #jetsons {
-            font-family: cursive;
-        }
-        
-        #addams {
-            font-family: Monospace;
-        }
-        
-        #flinstones{
-            font-family: serif;
-        }
-        </style>
-    </head>
-    <body>
-  
+ 
+   </style>
